# cidr-utils

./: Cargo.toml  README.md
.github/workflows/: ci-version.yml  ci.yml
src/: lib.rs  traits.rs
src/cidr/: ip_cidr.rs  ip_cidr_error.rs  ip_cidr_iterators.rs  ipv4_cidr.rs  ipv6_cidr.rs  mod.rs
src/cidr/v4/: functions.rs  ipv4_able.rs  ipv4_cidr.rs  ipv4_cidr_error.rs  ipv4_cidr_iterators.rs  mod.rs
src/cidr/v6/: functions.rs  ipv6_able.rs  ipv6_cidr.rs  ipv6_cidr_error.rs  ipv6_cidr_iterators.rs  mod.rs
src/combiner/: fmt.rs  mod.rs  v4.rs  v6.rs
src/iterator/: mod.rs  v4.rs  v6.rs
src/separator/: v4.rs  v6.rs
src/utils/: ip_cidr_combiner.rs  ip_cidr_separator.rs  ipv4_cidr_combiner.rs  ipv4_cidr_separator.rs  ipv6_cidr_combiner.rs  ipv6_cidr_separator.rs  mod.rs
src/utils/v4/: ipv4_cidr_combiner.rs  ipv4_cidr_separator.rs  mod.rs
src/utils/v6/: ipv6_cidr_combiner.rs  ipv6_cidr_separator.rs  mod.rs
tests/: ip_cidr_combiner.rs  ip_cidr_separator.rs  ipv4_cidr.rs  ipv4_cidr_combiner.rs  ipv4_cidr_overflow_check.rs  ipv4_cidr_separator.rs  ipv4_starts_from.rs  ipv6_cidr.rs  ipv6_cidr_combiner.rs  ipv6_cidr_overflow_check.rs  ipv6_cidr_separator.rs  ipv6_starts_from.rs
