[package]
name = "cidr-utils"
version = "0.3.0"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/cidr-utils"
homepage = "https://magiclen.org/cidr-utils"
keywords = ["cidr", "ip", "ipv4", "ipv6"]
categories = ["parser-implementations", "data-structures", "network-programming"]
description= "This crate provides data structures and functions to deal with IPv4 CIDRs and IPv6 CIDRs."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/cidr-utils", branch = "master" }
appveyor = { repository = "magiclen/cidr-utils", branch = "master", service = "github" }

[dependencies]
regex = "1.1.5"
lazy_static = "1.3.0"
