[package]
name = "cidr-utils"
version = "0.5.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/cidr-utils"
homepage = "https://magiclen.org/cidr-utils"
keywords = ["cidr", "ip", "ipv4", "ipv6"]
categories = ["parser-implementations", "data-structures", "network-programming"]
description = "This crate provides data structures and functions to deal with IPv4 CIDRs and IPv6 CIDRs."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
regex = "1"
once_cell = "1"

num-traits = "0.2"
num-bigint = "0.4"

debug-helper = "0.3"

serde = { version = "1", optional = true }