[package]
name = "cidr-utils"
version = "0.6.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.67"
repository = "https://github.com/magiclen/cidr-utils"
homepage = "https://magiclen.org/cidr-utils"
keywords = ["cidr", "ip", "ipv4", "ipv6"]
categories = ["network-programming"]
description = "This crate provides functions for working with IPv4 CIDRs and IPv6 CIDRs."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
cidr = "0.2"

num-traits = "0.2"
num-bigint = "0.4"

[features]
default = ["iterator", "combiner", "separator"]

iterator = []
combiner = []
separator = ["combiner", "iterator"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]